# pyday

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.json  test.py  use.md
.github/workflows/: poetry-pypi.yml  python-publish.yml
doc/: CHANGLOG.md  Todo.md  changelog.md  opencc_setating.md
doc/documentation/: Data2PDF.md  Data2PDF_ALL.md  d2pdf.md  dr.md  guide_en.md  guide_tc.md
doc/documentation/DataReader/: DataReader_ALL.md
doc/documentation/Tool/: Tool_ALL.md
pyday/: main.py
pyday_AnsonCar.egg-info/: PKG-INFO  SOURCES.txt
src/: pypi.sh  set.sh  test.ipynb  test.py
src/pyday/: ChangLanguage.py  Data2PDF.py  ShowData.py  __init__.py  config.py
src/pyday/Data2PDF/: BasicFont.py  BasicStyle.py  Data2PDF.py  Data2PDF2.py
src/pyday/DataReader/: DataReader.py
src/pyday/Tool/: ChangLang.py  ChangLanguage.py  DataUnZip.py  dirTree.py  unzip.py
src/pyday/basic/: BaseClass.py  config.py
src/pyday_AnsonCar/: ReadData.py  __init__.py
src/pyday_AnsonCar/Chart/M/: MChart.py
src/script/: build.sh  set.sh
test/: M.ipynb  Main.ipynb  aboutData.ipynb  bar.ipynb  test.ipynb  test.json
test/Usage/Data2PDF/: inputFile.py
test/oop/: f.py
