[project]
name = "pyday_AnsonCar"
version = "0.0.1"
authors = [
  { name="AnsonCar", email="anson1tsang@gmail.com" },
]
description = "This Python package aims to provide fast and convenient methods for processing, analyzing, and visualizing data. It will offer a range of features and tools to assist users in data preprocessing, statistical analysis, and visualization, enabling them to better understand and accurately present their data."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AnsonCar/pyday"
"Bug Tracker" = "https://github.com/AnsonCar/pyday/issues"