[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyday_AnsonCar"
version = "0.0.16"
authors = [
  { name="AnsonCar", email="asnon1tsang@gmail.com" },
]
description = "This Python package aims to provide fast and convenient methods for processing, analyzing, and visualizing data. It will offer a range of features and tools to assist users in data preprocessing, statistical analysis, and visualization, enabling them to better understand and accurately present their data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.3"
    "pandas>=1.2.0"
    "pyecharts>=2.0.3"
]

[project.urls]
"Homepage" = "https://github.com/AnsonCar/pyday"
"Bug Tracker" = "https://github.com/AnsonCar/pyday/issues"